--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '8'  # 你可以根据需要更改 .NET Core 版本
+        dotnet-version: '8.0.x'  # 你可以根据需要更改 .NET Core 版本
 
     - name: Build and Publish
       run: |
